arreglando estrellas y botones con hover

--- a/css/common.css
+++ b/css/common.css
@@ -33,6 +33,9 @@
 .col-2{
   width: 16.666%;
 }
+.col-2-5{
+  width: 20.833%;
+}
 .col-3{
   width: 25%;
 }
@@ -43,7 +46,7 @@
   width: 41.666%;
 }
 .col-8{
-    
+
     width: 66.666;
 }
 .col-12{
