--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,34 @@ align-content: center;
 background-color:  white;
   color:#19c3a8;
 }
+.modal {
+   display: none;
+    position: fixed;
+    padding: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(249, 247, 247);
+    background-color: rgb(0, 0, 0, 0.9);
+}
+
+/* Modal Content (image) */
+#modal-content{
+    margin : auto ;
+    display: block;
+    width: 60%;
+    max-width: 700px;
+
+
+}
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color:#827f7f;
+  font-size: 100px;
+  font-weight: bold;
+  transition: 0.3s;
+}
