arreglando indentacion y opacidad

--- a/css/main.css
+++ b/css/main.css
@@ -23,23 +23,24 @@ body {
 }
 
 img {
+
   vertical-align: middle;
 }
 
-a {
+.ac {
   color: white;
   text-decoration: none;
 }
 
-a:hover {
-   background-color: #18BC9C ;
+.ac:hover {
+ background-color: #18BC9C ;
 }
 .link{
   font-weight: 700;
   padding: 21px;
 }
 header{
-position: fixed;
+  position: fixed;
   background: #283145;
   width: 100%;
   top: 0;
@@ -62,16 +63,16 @@ position: fixed;
   font-size: 35px;
 }
 input{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 2px solid #EEEEEE;
+  width: 100%;
+  padding: 20px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid #EEEEEE;
 }
 textarea{
   width: 100%;
-    height: 150px;
+  height: 150px;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
@@ -85,10 +86,10 @@ footer{
   background: #233140;
 }
 .familiafuente{
-font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 .familiafuentedos{
-font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 .tamano{
   font-size: 24px;
@@ -104,7 +105,7 @@ font-family: 'Lato', sans-serif;
   font-size: 14px;
 }
 .estrella{
-height:  60px;
+  height:  60px;
 }
 .boton3 {
   color: white !important;
@@ -132,7 +133,7 @@ height:  60px;
 
 }
 .boton1:hover {
-background-color:#139681;
+  background-color:#139681;
 
 }
 .raya{
@@ -151,41 +152,90 @@ background-color:#139681;
   font-size:20px;
   vertical-align: middle;
   border-radius: 50%;
-border: 2px solid white;
-align-content: center;
+  border: 2px solid white;
+  align-content: center;
 }
 .circulo:hover{
-background-color:  white;
+  background-color:  white;
   color:#19c3a8;
 }
 .modal {
-   display: none;
-    position: fixed;
-    padding: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(249, 247, 247);
-    background-color: rgb(0, 0, 0, 0.9);
+ display: none;
+ position: fixed;
+ padding: 100px;
+ left: 0;
+ top: 0;
+ width: 100%;
+ height: 100%;
+ overflow: auto;
+ background-color: rgb(249, 247, 247);
+ background-color: rgb(0, 0, 0, 0.9);
 }
 
 /* Modal Content (image) */
 #modal-content{
-    margin : auto ;
-    display: block;
-    width: 60%;
-    max-width: 700px;
+  margin : auto ;
+  display: block;
+  width: 60%;
+  max-width: 700px;
 
 
 }
 .close {
   position: absolute;
-  top: 15px;
-  right: 35px;
+  top: -28px;
+  right: 46px;
   color:#827f7f;
   font-size: 100px;
-  font-weight: bold;
+
   transition: 0.3s;
+}
+.close:hover{
+  color: #cecccc;
+}
+#imagensota{
+  margin-left: -102px;
+}
+.medida{
+  width: 900px;
+  margin-left: -90px;
+
+  letter-spacing: 2px;
+
+}
+.amodal{
+  color: #18BC9C;
+  text-decoration: none;
+}
+.amodal:hover{
+  text-decoration: underline;
+}
+
+.spanmodal{
+  padding: 27px;
+
+
+}
+.botoncerrar{
+  padding: 10px;
+  border-radius: 4px;
+  background-color: #fff;
+  border:1px solid #ccc;
+}
+.botoncerrar:hover{
+  background-color: #c7c7c7;
+}
+.invisible{
+  color: #19c3a8;
+  display: none;
+}
+.imagen{
+  background: none;
+}
+
+
+.imagen:hover{
+  background: rgba(255,102,0, 0.5);
+  opacity: .5;
+
 }
